Update Healthcare cost prediction - Standardization.ipynb

--- a/Healthcare cost prediction - Standardization.ipynb
+++ b/Healthcare cost prediction - Standardization.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('C:/Users/megha/OneDrive/Desktop/Python/ibm/insurance.csv')"
+    "df = pd.read_csv('https://www.kaggle.com/ruslankl/health-care-cost-prediction-w-linear-regression/data?select=insurance.csv')"
    ]
   },
   {
@@ -63,6 +63,9 @@
        "(1338, 7)"
       ]
      },
+     
+     
+     
      "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
