--- a/Healthcare cost prediction - Normalization.ipynb
+++ b/Healthcare cost prediction - Normalization.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('C:/Users/megha/OneDrive/Desktop/Python/ibm/insurance.csv')"
+    "df = pd.read_csv('insurance.csv')"
    ]
   },
   {
